--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,20 @@ code {
   height: 100vh;
 }
 
+.stadium {
+  width: 70vw;
+  height: 55vh;
+  border: 4px dotted;
+}
+
 .main {
     display: flex;
     flex-direction: row;
     width: 70vw;
-    height: 50vh;
+    height: 40vh;
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
-    border: 4px dotted;
     border-radius: 15px;
 }
 
@@ -69,6 +74,12 @@ code {
   height: 15px;
 }
 
+#healthe {
+  width: 200px;
+  margin: 15px;
+  height: 15px;
+}
+
 progress::-moz-progress-bar {
   background: lightcoral;
 }
@@ -83,9 +94,10 @@ progress::-webkit-progress-bar {
 
 .attack {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  width: 70vw;
 }
 
 .stuff {
