--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,13 @@ progress::-webkit-progress-bar {
 
 .startbtn {
   text-align: center;
+  width: 400px;
+  max-width: 400px;
+  margin: 1rem;
+  padding: 2rem;
+  box-shadow: 0 0 40px rgba(0 0 0 0.2);
+  border-radius: var(--border-radius);
+  background: #f677e5;
 }
 
 .container {
@@ -148,7 +155,7 @@ progress::-webkit-progress-bar {
 
 .container,
 .form__input,
-.form__button {
+.form__button, .startbtn {
   font-family: 'Cherry Cream Soda', cursive;
   font-size: 20px;
 }
